--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "VK client",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -33,6 +33,7 @@
     "gulp.spritesmith": "^4.3.0",
     "jshint": "^2.9.2",
     "merge-stream": "^1.0.0",
+    "mime": "^1.3.6",
     "vinyl-buffer": "^1.0.0"
   },
   "dependencies": {
